--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <meta property="twitter:description" content="모디 | 같이 있는, 가치 있는 즐거움"/>
     <meta property="twitter:image" content="#"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/resource/css/reset.css" />
-    <link rel="stylesheet" href="/resource/css/index.css" />
+    <link rel="stylesheet" href="resource/css/reset.css" />
+    <link rel="stylesheet" href="resource/css/index.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <script src="/resource/lib/jquery-3.5.1-slim.js"></script>
-    <script src="/resource/js/index.js"></script>
+    <script src="resource/lib/jquery-3.5.1-slim.js"></script>
+    <script src="resource/js/index.js"></script>
   </head>
   <body>
     <header>
       <div class="container container__flex header__wrap">
-        <img src="/resource/img/logo-modi-pc.svg" alt="LOGO">
+        <img src="resource/img/logo-modi-pc.svg" alt="LOGO">
         <a href="#">회사 소개</a>
         <a href="#">새로운 소식</a>
         <a href="#">자주 묻는 질문</a>
@@ -39,12 +39,12 @@
           <p class="left__subtitle"
             data-aos="fade-up">이전에 없던 함께 하는 즐거움, 모디에서 즐기세요</p>
           <div class="container__flex left__img">
-            <a href="#"><img src="/resource/img/icn-google@3x.png" alt="GOOGLE"></a>
-            <a href="#"><img src="/resource/img/icn-apple@3x.png" alt="APPLE"></a>
+            <a href="#"><img src="resource/img/icn-google@3x.png" alt="GOOGLE"></a>
+            <a href="#"><img src="resource/img/icn-apple@3x.png" alt="APPLE"></a>
           </div>
         </div>
         <div class="container__right">
-          <img src="/resource/img/img-01@3x.png" alt="TELIMG" class="">
+          <img src="resource/img/img-01@3x.png" alt="TELIMG" class="">
         </div>
       </div>
     </section>
@@ -55,7 +55,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="/resource/img/img-02@3x.png" alt="TELIMG" class="">
+          <img src="resource/img/img-02@3x.png" alt="TELIMG" class="">
         </div>
         <div class="container__text"
           data-aos="fade-up"
@@ -93,7 +93,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="/resource/img/img-03@3x.png" alt="TELIMG" class="">
+          <img src="resource/img/img-03@3x.png" alt="TELIMG" class="">
         </div>
       </div>
     </section>
@@ -126,14 +126,14 @@
           data-aos-delay="500"
           data-aos-easing="ease">
           <div class="logo__item">
-            <img src="/resource/img/logo-ms@3x.png" alt="MSLOGO">
+            <img src="resource/img/logo-ms@3x.png" alt="MSLOGO">
             <p>
               2021년 4월 마이크로소프트 <br>
               클라우드 파트너(CSP) 선정
             </p>
           </div>
           <div class="logo__item">
-            <img src="/resource/img/logo-majoong@3x.png" alt="MSLOGO">
+            <img src="resource/img/logo-majoong@3x.png" alt="MSLOGO">
             <p>
               2021년 6월 중소벤처기업부X마이<br>
               크로소프트 지원 글로벌 협업<br>
@@ -141,7 +141,7 @@
             </p>
           </div>
           <div class="logo__item">
-            <img src="/resource/img/logo-venture@3x.png" alt="MSLOGO">
+            <img src="resource/img/logo-venture@3x.png" alt="MSLOGO">
             <p>
               2019년 10월 한국관광공사<br>
               예비창업벤처
