--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="resource/img/img-02@3x.png" alt="TELIMG" class="">
+          <img src="resource/img/img1.gif" alt="TELIMG" class="">
         </div>
         <div class="container__text"
           data-aos="fade-up"
@@ -111,7 +111,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="resource/img/img-03@3x.png" alt="TELIMG" class="">
+          <img src="resource/img/img2.gif" alt="TELIMG" class="">
         </div>
       </div>
     </section>
