--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <header class="pc">
       <div class="container container__flex header__wrap">
         <img src="resource/img/logo-modi-pc.svg" alt="LOGO">
-        <a href="#">회사 소개</a>
-        <a href="#">새로운 소식</a>
-        <a href="#">자주 묻는 질문</a>
-        <a href="#">채용 공고</a>
+        <a href="https://bogyu.notion.site/c9091d09feb148729fb175cf2dc6a9f2" target="blank">회사 소개</a>
+        <a href="https://bogyu.notion.site/eec634b6a95d463b81863ed28c35fb3a" target="blank">새로운 소식</a>
+        <a href="https://bogyu.notion.site/73e4718f7e934a58877b696e91e69592" target="blank">자주 묻는 질문</a>
+        <a href="https://bogyu.notion.site/b6b781452dd040a5bd1fefe168adc5ff" target="blank">채용 공고</a>
       </div>
     </header>
     <header class="mo">
@@ -38,11 +38,11 @@
       <div class="side__bg"></div>
       <div class="side__container">
         <p class="close__box"><i class="side__close"></i></p>
-        <a href="#">회사 소개</a>
-        <a href="#">새로운 소식</a>
-        <a href="#">자주 묻는 질문</a>
-        <a href="#">채용 공고</a>
-        <a href="#">앱 다운로드</a>
+        <a href="https://bogyu.notion.site/c9091d09feb148729fb175cf2dc6a9f2" target="blank">회사 소개</a>
+        <a href="https://bogyu.notion.site/eec634b6a95d463b81863ed28c35fb3a" target="blank">새로운 소식</a>
+        <a href="https://bogyu.notion.site/73e4718f7e934a58877b696e91e69592" target="blank">자주 묻는 질문</a>
+        <a href="https://bogyu.notion.site/b6b781452dd040a5bd1fefe168adc5ff" target="blank">채용 공고</a>
+        <a onclick="moveToDownload()">앱 다운로드</a>
       </div>
     </div>
     <section>
@@ -56,14 +56,17 @@
           <p class="left__subtitle"
             data-aos="fade-up">이전에 없던 함께 하는 즐거움, 모디에서 즐기세요</p>
           <div class="container__flex left__img">
-            <a href="#"><img src="resource/img/icn-google@3x.png" alt="GOOGLE"></a>
-            <a href="#"><img src="resource/img/icn-apple@3x.png" alt="APPLE"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.welkey.moim" target="blank"><img src="resource/img/icn-google-2@3x.png" alt="GOOGLE"></a>
+            <a onclick="moveToDownload()"><img src="resource/img/icn-apple-2@3x.png" alt="APPLE"></a>
           </div>
         </div>
         <div class="container__right">
           <img src="resource/img/img-01@3x.png" alt="TELIMG" class="pc">
           <img src="resource/img/img-mobile-01@3x.png" alt="TELIMG" class="mo">
         </div>
+        <p class="download__mo" onclick="moveToDownload()">
+          <i></i><span>앱 다운로드</span>
+        </p>
       </div>
     </section>
     <section class="bg__lightblue">
@@ -175,17 +178,17 @@
           <p><span>대표이사 신수경</span><span>김보규</span></p>
           <p><span>서울특별시 중구 청계천로 40, 810호(다동, 관광기업 지원센터)</span></p>
           <p><span>650-86-01225</span></p>
-          <p><a href="#">서비스 이용약관</a><a href="#">개인정보 처리방침</a></p>
+          <p><a href="https://bogyu.notion.site/ca9747467a804b5e8c747ffa72fd0a52" target="blank">서비스 이용약관</a><a href="https://bogyu.notion.site/5fce03a0436f4315a91132e5b0bfc959" target="blank">개인정보 처리방침</a></p>
           <p class="footer__copy"><span>ⓒ 2022 WelkeyINC. All Rights Reserved.</span></p>
         </div>
         <div class="footer__container">
           <p class="footer__title"><span>서비스</span></p>
           <p id="footerApp"><span>앱 다운로드</span></p>
           <p class="footer__app">
-            <a href="#">엡스토어</a><br>
-            <a href="#">구글플레이</a>
+            <a>엡스토어</a><br>
+            <a href="https://play.google.com/store/apps/details?id=com.welkey.moim" target="blank">구글플레이</a>
           </p>
-          <p><a href="#">자주 묻는 질문</a></p>
+          <p><a href="https://bogyu.notion.site/73e4718f7e934a58877b696e91e69592" target="blank">자주 묻는 질문</a></p>
         </div>
         <div class="footer__container">
           <p class="footer__title"><span>고객센터</span></p>
@@ -197,8 +200,8 @@
       <div class="container container__flex section__06">
         <div class="footer__container">
           <p class="footer__title"><span>서비스</span></p>
-          <p id="footerAppMo"><span>앱 다운로드</span></p>
-          <p><a href="#">자주 묻는 질문</a></p>
+          <p id="footerAppMo" onclick="moveToDownload()"><span>앱 다운로드</span></p>
+          <p><a href="https://bogyu.notion.site/73e4718f7e934a58877b696e91e69592" target="blank">자주 묻는 질문</a></p>
         </div>
         <div class="footer__container">
           <p class="footer__title"><span>고객센터</span></p>
@@ -209,7 +212,7 @@
           <p><span>대표이사 신수경</span><span>김보규</span></p>
           <p><span>서울특별시 중구 청계천로 40, 810호(다동, 관광기업 지원센터)</span></p>
           <p><span>650-86-01225</span></p>
-          <p><a href="#">서비스 이용약관</a><a href="#">개인정보 처리방침</a></p>
+          <p><a href="https://bogyu.notion.site/ca9747467a804b5e8c747ffa72fd0a52" target="blank">서비스 이용약관</a><a href="https://bogyu.notion.site/5fce03a0436f4315a91132e5b0bfc959" target="blank">개인정보 처리방침</a></p>
           <p class="footer__copy"><span>ⓒ 2022 WelkeyINC. All Rights Reserved.</span></p>
         </div>
       </div>
@@ -217,6 +220,16 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+    <script>
+      const moveToDownload = () => {
+        const varUA = navigator.userAgent.toLowerCase();
+        if ( varUA.indexOf("iphone") > -1||varUA.indexOf("ipad") > -1||varUA.indexOf("ipod") > -1 ) {
+          alert('IOS 앱은 준비중입니다.')
+          return false
+        }
+        window.open('https://play.google.com/store/apps/details?id=com.welkey.moim', 'blank')
+      }
     </script>
   </body>
 </html>
