--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <p class="footer__title"><span>서비스</span></p>
           <p id="footerApp"><span>앱 다운로드</span></p>
           <p class="footer__app">
-            <a>엡스토어</a><br>
+            <a>앱스토어</a><br>
             <a href="https://play.google.com/store/apps/details?id=com.welkey.moim" target="blank">구글플레이</a>
           </p>
           <p><a href="https://bogyu.notion.site/73e4718f7e934a58877b696e91e69592" target="blank">자주 묻는 질문</a></p>
