--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="resource/img/img1.gif" alt="TELIMG" class="">
+          <img src="resource/img/gif-1-2.webp" alt="TELIMG" class="">
         </div>
         <div class="container__text"
           data-aos="fade-up"
@@ -114,7 +114,7 @@
           data-aos-duration="1500"
           data-aos-delay="500"
           data-aos-easing="ease">
-          <img src="resource/img/img2.gif" alt="TELIMG" class="">
+          <img src="resource/img/gif-2-2.webp" alt="TELIMG" class="">
         </div>
       </div>
     </section>
@@ -128,8 +128,8 @@
           <p class="container__subtitle">우리의 이야기를 확인해보세요</p>
         </div>
         <div class="container__video">
-          <iframe src="https://www.youtube.com/embed/DUGdT7PcxUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe src="https://www.youtube.com/embed/bDH9t-XBWLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/DUGdT7PcxUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+          <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/bDH9t-XBWLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
       </div>
     </section>
