--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container__img img__left"
           data-aos="fade-up"
           data-aos-duration="1500"
-          data-aos-delay="1000"
+          data-aos-delay="1500"
           data-aos-easing="ease">
           <img src="resource/img/gif-1-2.webp" alt="TELIMG" class="">
         </div>
@@ -112,7 +112,7 @@
         <div class="container__img img__right"
           data-aos="fade-up"
           data-aos-duration="1500"
-          data-aos-delay="1000"
+          data-aos-delay="1500"
           data-aos-easing="ease">
           <img src="resource/img/gif-2-2.webp" alt="TELIMG" class="">
         </div>
@@ -127,7 +127,10 @@
           <p class="container__title">가치 있는 즐거움! <b>모디!</b></p>
           <p class="container__subtitle">우리의 이야기를 확인해보세요</p>
         </div>
-        <div class="container__video">
+        <div class="container__video"
+          data-aos="fade-up"
+          data-aos-duration="1500"
+          data-aos-easing="ease">
           <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/DUGdT7PcxUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
           <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/bDH9t-XBWLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
@@ -224,7 +227,8 @@
     <script>
       const moveToDownload = () => {
         const varUA = navigator.userAgent.toLowerCase();
-        if ( varUA.indexOf("iphone") > -1||varUA.indexOf("ipad") > -1||varUA.indexOf("ipod") > -1 ) {
+        if((navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1) ||
+          /iphone|ipod|ipad/i.test(navigator.userAgent)){
           alert('IOS 앱은 준비중입니다.')
           return false
         }
