--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta property="twitter:title" content="모디 | 같이 있는, 가치 있는 즐거움"/>
     <meta property="twitter:description" content="모디 | 같이 있는, 가치 있는 즐거움"/>
     <meta property="twitter:image" content="#"/>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="resource/css/reset.css" />
     <link rel="stylesheet" href="resource/css/index.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+    <link rel="stylesheet" href="resource/css/aos.css" />
     <script src="resource/lib/jquery-3.5.1-slim.js"></script>
     <script src="resource/js/index.js"></script>
   </head>
@@ -48,16 +47,20 @@
     <section>
       <div class="container container__flex section__01">
         <div class="container__flex container__left">
-          <p class="left__title"
-            data-aos="fade-up">
+<!--           <p class="left__title"  data-aos="fade-up"> -->
+          <p class="left__title">
             같이 있는,<br>
             가치 있는 즐거움. <br class="mo"><b>모디!</b>
           </p>
-          <p class="left__subtitle"
-            data-aos="fade-up">이전에 없던 함께 하는 즐거움, 모디에서 즐기세요</p>
-          <div class="container__flex left__img">
-            <a href="https://play.google.com/store/apps/details?id=com.welkey.moim" target="blank"><img src="resource/img/icn-google-2@3x.png" alt="GOOGLE"></a>
-            <a onclick="iosAlert()"><img src="resource/img/icn-apple-2@3x.png" alt="APPLE"></a>
+<!--           <p class="left__subtitle" data-aos="fade-up"> -->
+          <p class="left__subtitle">
+            	이전에 없던 함께 하는 즐거움, 모디에서 즐기세요</p>
+          <div class="container__flex left__imgcontainer">
+            <div class="container__flex left__img">
+              <a href="https://play.google.com/store/apps/details?id=com.welkey.moim" target="blank"><img src="resource/img/icn-google-2@3x.png" alt="GOOGLE"></a>
+              <a onclick="iosAlert()"><img src="resource/img/icn-apple-2@3x.png" alt="APPLE"></a>
+            </div>
+            <p class="left__iosalert">*IOS 앱은 곧 출시 예정입니다.</p>
           </div>
         </div>
         <div class="container__right">
@@ -76,7 +79,7 @@
           data-aos-duration="1500"
           data-aos-delay="1500"
           data-aos-easing="ease">
-          <img src="resource/img/gif-1-2.webp" alt="TELIMG" class="">
+          <img src="resource/img/animated1.png" alt="TELIMG" class="">
         </div>
         <div class="container__text"
           data-aos="fade-up"
@@ -114,7 +117,7 @@
           data-aos-duration="1500"
           data-aos-delay="1500"
           data-aos-easing="ease">
-          <img src="resource/img/gif-2-2.webp" alt="TELIMG" class="">
+          <img src="resource/img/animated2.png" alt="TELIMG" class="">
         </div>
       </div>
     </section>
@@ -130,6 +133,7 @@
         <div class="container__video"
           data-aos="fade-up"
           data-aos-duration="1500"
+          data-aos-delay="500"
           data-aos-easing="ease">
           <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/DUGdT7PcxUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
           <div class="video__box"><iframe width="100%" height="315" src="https://www.youtube.com/embed/bDH9t-XBWLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -152,23 +156,24 @@
           <div class="logo__item">
             <img src="resource/img/logo-ms@3x.png" alt="MSLOGO">
             <p>
-              2021년 4월 마이크로소프트 <br>
+              <b>2021년 4월</b><br>
+              마이크로소프트<br>
               클라우드 파트너(CSP) 선정
             </p>
           </div>
           <div class="logo__item">
             <img src="resource/img/logo-majoong@3x.png" alt="MSLOGO">
             <p>
-              2021년 6월 중소벤처기업부X마이<br>
-              크로소프트 지원 글로벌 협업<br>
-              프로그램 '마중' 선정
+              <b>2021년 6월</b><br>
+              중소벤처기업부X마이크로소프트<br>
+              글로벌 협업 프로그램 '마중' 선정
             </p>
           </div>
           <div class="logo__item">
             <img src="resource/img/logo-venture@3x.png" alt="MSLOGO">
             <p>
-              2019년 10월 한국관광공사<br>
-              예비창업벤처
+              <b>2019년 10월</b><br>
+              한국관광공사 예비창업벤처
             </p>
           </div>
         </div>
@@ -182,7 +187,7 @@
           <p><span>서울특별시 중구 청계천로 40, 810호(다동, 관광기업 지원센터)</span></p>
           <p><span>650-86-01225</span></p>
           <p><a href="https://bogyu.notion.site/ca9747467a804b5e8c747ffa72fd0a52" target="blank">서비스 이용약관</a><a href="https://bogyu.notion.site/5fce03a0436f4315a91132e5b0bfc959" target="blank">개인정보 처리방침</a></p>
-          <p class="footer__copy"><span>ⓒ 2022 WelkeyINC. All Rights Reserved.</span></p>
+          <p class="footer__copy"><span>ⓒ 2022 Welkey Inc. All Rights Reserved.</span></p>
         </div>
         <div class="footer__container">
           <p class="footer__title"><span>서비스</span></p>
@@ -216,23 +221,27 @@
           <p><span>서울특별시 중구 청계천로 40, 810호(다동, 관광기업 지원센터)</span></p>
           <p><span>650-86-01225</span></p>
           <p><a href="https://bogyu.notion.site/ca9747467a804b5e8c747ffa72fd0a52" target="blank">서비스 이용약관</a><a href="https://bogyu.notion.site/5fce03a0436f4315a91132e5b0bfc959" target="blank">개인정보 처리방침</a></p>
-          <p class="footer__copy"><span>ⓒ 2022 WelkeyINC. All Rights Reserved.</span></p>
+          <p class="footer__copy"><span>ⓒ 2022 Welkey Inc. All Rights Reserved.</span></p>
         </div>
       </div>
     </section>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="resource/js/aos.js"></script>
     <script>
         AOS.init();
     </script>
     <script>
       const moveToDownload = () => {
-        const varUA = navigator.userAgent.toLowerCase();
-        if((navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1) ||
-          /iphone|ipod|ipad/i.test(navigator.userAgent)){
-          alert('IOS 앱은 준비중입니다.')
-          return false
-        }
-        window.open('https://play.google.com/store/apps/details?id=com.welkey.moim', 'blank')
+//     	  location.href = "popup.html";
+    	  window.onload = function(){
+    		    const varUA = navigator.userAgent.toLowerCase();
+    		    if((navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1) ||
+    		      /iphone|ipod|ipad/i.test(navigator.userAgent)){
+    		      alert('IOS 앱은 곧 출시 예정입니다.');
+    		      return false;
+    		    }
+//    	 	    window.open('https://play.google.com/store/apps/details?id=com.welkey.moim', 'blank');
+    		    window.open('https://play.google.com/store/apps/details?id=com.welkey.moim');
+    	    }
       }
       const iosAlert = () => {
           alert('IOS 앱은 준비중입니다.')
